<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">android-flowlayout-example</string>
    <string name="flow_layout_activity">layout</string>
    <string name="flow_layout_manager_activity">manager</string>
    <string name="recyclerview_example">RecyclerView Example</string>
    <string name="scrollview_example">ScrollView Example</string>
    <string name="chips_example">ChipsView Example</string>

    <string name="button_test">test</string>
    <string name="button_horizontalMargin">horizontal</string>
    <string name="button_verticalMargin">vertical</string>
    <string name="button_longTest">not fit in previous line</string>
    <string name="button_newLine">break line</string>

    <string name="to">To :</string>
    <string name="bcc">Bcc :</string>
    <string name="cc">Cc :</string>
    <string name="simple_example">Simple Example</string>
    <string name="change_style">Change Style</string>
    <string name="change_color">Change Color</string>
    <string name="disable_views">Disable Views</string>
    <string name="calculate_text">Calculate text</string>
</resources>
