<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/recycler_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recyclerview_example"/>

    <Button
        android:id="@+id/scroll_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrollview_example"/>

    <Button
        android:id="@+id/chips_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chips_example"/>

    <Button
        android:id="@+id/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/simple_example"/>

</LinearLayout>
