<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/to"
                android:layout_marginRight="8dp"
                android:textColor="@color/astroBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <org.apmem.tools.layouts.AstroFlowLayout
                android:id="@+id/to_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layoutDirection="ltr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/cc"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:textColor="@color/astroBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <org.apmem.tools.layouts.AstroFlowLayout
                android:id="@+id/cc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layoutDirection="ltr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/bcc"
                android:layout_marginRight="8dp"
                android:textColor="@color/astroBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <org.apmem.tools.layouts.AstroFlowLayout
                android:id="@+id/bcc_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layoutDirection="ltr"/>

        </LinearLayout>

        <Button
            android:id="@+id/change_style"
            android:text="@string/change_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/change_color"
            android:text="@string/change_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/disable_views"
            android:text="@string/disable_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
